--- a/css/main.css
+++ b/css/main.css
@@ -30,17 +30,64 @@ main {
   gap: .75;
 }
 
-.main-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(15rem, 100%), 1fr));
-  gap: 1em;
+.img-banner {
+  grid-area: banner;
 }
 
-.aside-grid {
-  display: grid;
-  grid-template-columns: 3fr;
-  grid-template-areas:
-  "header header header"
-  "main main main"
-  "temple rhodes babylon";
+.banner-text {
+  grid-area: banner;
+  color: #fff;
+  align-self: end;
+  padding: 1.5rem 1rem;
+}
+
+.banner-text h2,
+.margin-text p {
+  margin-bottom: 0;
+}
+
+header {
+  padding: 1.5rem 1rem;
+}
+
+h1 {
+  font-weight: normal;
+  font-style: italic;
+  font-size: 1.8rem;
+  margin: 0;
+}
+
+h2 {
+  font-weight: lighter;
+  font-style: italic;
+  font-size: 1.5rem;
+  margin: 0 0 1.5rem;
+}
+
+p {
+  margin: 0;
+}
+
+figure {
+  margin: 0;
+}
+
+figure h2 {
+  margin-bottom: 0;
+}
+
+figcaption {
+  padding: 1rem;
+}
+
+dl {
+  margin: 0;
+}
+
+dd {
+  margin-left: 1rem;
+}
+
+dt {
+  font-style: italic;
 }
