--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,9 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
-    "banner banner banner"
-    "col1 col2 col3";
-  gap: 0.75;
+  "banner banner banner"
+  "col1 col2 col3";
+  gap: .75rem;
 }
 
 .img-banner {
