--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: "Merriweather", serif;
+  font-family: Merriweather, serif;
   line-height: 1.5;
 }
 
@@ -14,11 +14,6 @@ img {
 
 body {
   margin: 0;
-}
-
-h1 {
-  font-style: italic;
-  font-size: 1.8rem;
 }
 
 main {
